--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
     <p-tabView>
-      <p-tabPanel header="News">
+      <p-tabPanel header="About">
         <app-panel-top></app-panel-top>
       </p-tabPanel>
-      <p-tabPanel header="About">
+      <p-tabPanel header="Bylaws">
         <app-panel-middle></app-panel-middle>
       </p-tabPanel>
       <p-tabPanel header="Petition">
