--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -2,8 +2,8 @@
   <div class="not-sidebar">
 
     <div class="paragraph-copy">
-      At this time, it is the top priority of WSTAG to update the WST by-laws so as to prevent the unscrupulous collection of voting proxies by any one individual.
-      The current Board is unwilling to make these changes (among many other failures), and must therefore be removed by petition before we can more forward.
+      At this time, it is the top priority of WSTAG to update the by-laws so as to prevent the unscrupulous Boards from remaining in power long past the wishes of the Members.
+      The current Board is unwilling to make these changes, and must therefore be removed by petition before we can more forward.
       <br />
     </div>
     <div class="paragraph-header">Petition for a Special Meeting</div>
@@ -20,7 +20,7 @@
       once the meeting date has been set.
      </div>
     
-     <div class="paragraph-header">Never Again</div>
+     <div class="paragraph-header">To Sign the Petition</div>
      <div class="paragraph-copy">
       After we are successful,....?
      </div>
