--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,17 +1,25 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">About the WST Advocacy Group</div>
+    <div class="paragraph-header">Update to the Bylaws</div>
+    
+
+      <span>The following changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span>
     <div class="paragraph-copy">
-      The WST HOA Board of Directors works for, and
-      should be held accountable to the members of the Association (the "Members"). Instead we have been ignored and cenored. 
-      Every meeting this Board has is a closed Executive session in which we have no say and are not allowed to be a part of. No minutes recorded. 
-      Zoom meeting recording are "lost" if one asks to see them.<br/>
-      The WST Advocacy Group may be compared to an organized union for labor.  Each of us alone can be ignored.  
-      But together, working as a unified and organized group, we can be a positive force for change in our community.<br/>
-      The Westbury Square Townhomes Advocacy Group exists to provide Members with a means to make their voice heard, and to provide easily accessible 
-      information concerning the management, finances and leadership of the HOA.  <br>
+      <ul>
+        <li>Limit the number of proxies any single owner may hold</li>
+        <li>Separate the Board of Directors from the Officers</li>
+        <li>Require the President and Vice-President to reside on the property</li>
+        <li>Allow secure online voting</li>
+    </ul>
+    <div class="paragraph-copy">Because our bylaws were written in 1978 (before the internet!), there are many instances where the language is vague, 
+      outdated and fails to incorporate modern technology. For a full copy of the bylaws with all the proposed changes highlighted, please become a
+    member of WSTAG.</div>
+    <div class="paragraph-copy-bold">Become a member</div>
+    <div class="paragraph-copy">All WST Owners are eligible to join. Click on the 'Members' button above and follow the instructions.</div>
+      <p-divider></p-divider>
     </div>
-    <p-divider></p-divider>
+   
+  
   </div>
   <div class="sidebar200">
     <img class="images" src="assets\images\IMG_4013.jpg" />
