--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,29 +1,30 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">Become a Member!</div>
+    <div class="paragraph-copy-bold">What is the WST Advocacy Group?</div>
     <div class="paragraph-copy">
-      All WST owners are welcome to join.  Together we can hold the Board accountable and put an end to the secretive, self-serving and corrupt boards that have been a hallmark of the past decade.
-      Many of you are sick and tired of the political drama that you have simply given up. You have no interest to be involved or participate within our community.  <br>
-      THIS IS THE TIME TO MAKE A DIFFERENCE!<br>
-      We plan to use the exact same method of collecting proxies to gain back power, but rather than using that power for self-serving puroposes we will immediately update 
-      the Bylaws so it never happens again.  Lets fix this problem once and for all. We can do this!<br>
-      Click on the 'Members' button above and follow the instructions.
+      The Westbury Square Townhomes Advocacy Group exists to bring Members together for a common cause and provide a means to make 
+        your voice heard. Together we can hold the Board accountable and put an end to the secretive, 
+      self-serving and corrupt boards that have been a hallmark of the past decade and more.
+      Many of you are sick and tired of the political drama and have simply given up. You have no interest to get involved 
+      or participate in the politics of our community.  We understand!  But...</div>
+
+    <div class="paragraph-copy-bold">Now is the time to make a difference!</div>
+
+    <div class="paragraph-copy">As many of you know, there have been several efforts in the past to remove Board members or change 
+      the bylaws which have all fallen flat. They lacked the organization and communication necessary for a successful campaign for change.
+    We have that now.  Through this website and other social platforms we are better prepared to see this through than ever before.</div>
+
+    <div class="paragraph-copy-bold">We can do this!</div>
+
+    <div class="paragraph-copy">Our first priority is to update the bylaws to eliminate the loopholes which have allowed unscrupulous Boards to remain in power year after year.
+      Unfortunately, the current Board is opposed to these changes, and must therefore be removed before we can move forward.  
+      It's sad that we have to resort to petitions and forced removal, but that is where we find ourselves.</div>
+      <div class="paragraph-copy-bold">What's the next step?</div>
+      <div class="paragraph-copy">Click on the 'Bylaws' and 'Petition' tabs above to learn more about what we are proposing.</div>
+      <div class="paragraph-copy-bold">Become a member</div>
+    <div class="paragraph-copy">All WST Owners are eligible to join. Click on the 'Members' button above and follow the instructions.</div>
       <p-divider></p-divider>
-      <div class="paragraph-header">Update Bylaws</div>
-      <span>The following three changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span>
-    <div class="paragraph-copy">
-      <ul>
-        <li>Limit the number of proxies any single owner may hold</li>
-        <li>Prevent the Board from removing officers without reason. Currently any three officers may remove any another board member, 
-          and replace them with an unelected appointee without any notification or input from the Members</li>
-        <li>Allow secure online voting so members do not need to be present at the annual meeting to vote</li>
-    </ul>
-      There are many other instances in our bylawys where the language is vague, outdated and 
-      <p-divider></p-divider>
-    </div>
+    
    
-  </div>
-  <div class="sidebar200">
-    <img class="images" src="assets\images\IMG_4009.jpg" />
-  </div>
+
 </div>
