--- a/src/app/users/vehicle-list/vehicle-list.component.html
+++ b/src/app/users/vehicle-list/vehicle-list.component.html
@@ -14,6 +14,6 @@
   </div>
   <div class="edit-button" style="margin-top: 15px">
     <p-button label="Edit" icon="pi pi-file-edit" styleClass="p-button-sm"
-      (click)="sendToParent(data.id)"
+      (click)="sendToParent(data.space)"
     ></p-button>
   </div>
