--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,23 +3,27 @@
 </div>
 
 <div class="sidebar-container" *ngIf="userAuthenticated == true">
-
   <div class="not-sidebar">
-    As the current official WST website leaves much to be desired, this site may also serve as an altrnative to update owner information 
-    and submit other forms such as maintenance work orders.
-    <p-tabView>
+    As the current official WST website leaves much to be desired, this site may
+    also serve as an altrnative to update owner information and submit other
+    forms such as maintenance work orders.
+    <p-tabView (onChange)="onTabChange($event)">
       <p-tabPanel header="Account">
-       <app-account></app-account>
+       
+          <app-account [reset]="selectedTab === 'Account'"></app-account>
+       
       </p-tabPanel>
       <p-tabPanel header="Residents">
-       <app-residents ></app-residents>
+       
+          <app-residents [reset]="selectedTab === 'Residents'"></app-residents>
+       
       </p-tabPanel>
       <p-tabPanel header="Vehicles">
-        <app-vehicles></app-vehicles>
+        
+          <app-vehicles [reset]="selectedTab === 'Vehicles'"></app-vehicles>
+       
       </p-tabPanel>
-      <p-tabPanel header="Forms">
-       Still to come.
-      </p-tabPanel>
+      <p-tabPanel header="Forms"> Still to come. </p-tabPanel>
     </p-tabView>
   </div>
 </div>
