--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,8 +81,9 @@ body {
 
 .paragraph-copy-bold {
     display: block;
-    font-size: .8em;
+    font-size: 1em;
     font-weight: bold;
+    margin-bottom:12px;
 }
 
 .black12{
