--- a/src/app/hoa/issues/issues.component.html
+++ b/src/app/hoa/issues/issues.component.html
@@ -1,18 +1,18 @@
 <div class="section-header">Current Affairs</div>
 <p-divider></p-divider>
-<div class="paragraph-header">Property Liens</div>
+<div class="paragraph-header">Major Maintenance</div>
 <div class="paragraph-copy">
-  There are currently X owners overdue.. details???
+  In the future this is where we will keep you informed of maintenance issues and ongoing repairs.
 </div>
 
 <p-divider></p-divider>
-<div class="paragraph-header">Roofs Replacement</div>
+<div class="paragraph-header">Financial</div>
 <div class="paragraph-copy">
-  There are currently 2/3.... details???
+  In the future this is where we will keep you informed of our financial status.
 </div>
 
 <p-divider></p-divider>
-<div class="paragraph-header">Removal of Director</div>
+<div class="paragraph-header">Other</div>
 <div class="paragraph-copy">
-  In a move typical of the, 
+  
 </div>
