--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -12,6 +12,10 @@
      Once the requirements are met, the board <b >must</b> hold the meeting. Just as in regular annual meetings, a quorum is required and the vote must be at 
      least 51% of the voting members present to pass.
     </div>
+    <div class="paragraph-header">To Sign the Petition</div>
+     <div class="paragraph-copy">
+      Contact other members through our WhatsApp Group (click the WhatsApp menu item above for information.)
+     </div>
     
      <div class="paragraph-header">Voting Proxies at the Special Meeting</div>
      <div class="paragraph-copy">
@@ -20,9 +24,11 @@
       once the meeting date has been set.
      </div>
     
-     <div class="paragraph-header">To Sign the Petition</div>
+     <div class="paragraph-header">What Will Happen at the Meeting</div>
      <div class="paragraph-copy">
-      After we are successful,....?
+      The first order of business will be to vote on the specific purpose of the meeting to remove the current President and Vice-president.  
+      After that passes with at least 51% voting for, a motion will be put forward to extend the Special Meeting to include other business.  
+      After that passes with a 2/3's majority, we will carry on with a vote to update the bylaws with the proposed changes.
      </div>
   </div>
   <div class="sidebar200">
