--- a/src/app/users/residents/residents.component.html
+++ b/src/app/users/residents/residents.component.html
@@ -20,6 +20,7 @@
     </div>
     <div *ngIf="display=='form'" class="form-group">
       <form [formGroup]="form" (ngSubmit)="submitForm()">
+       
         <div class="p-fluid">
           <div class="p-field">
             <label for="firstname">First Name</label>
@@ -45,14 +46,12 @@
             </small>
           </div>
 
-          <div class="p-field">
-            <label for="email">Email</label>
-            <input type="email" id="email" formControlName="email" pInputText class="p-inputtext-sm">
-          </div>
+         
 
           <div class="flex-column">
             <button type="submit" pButton label="Submit" [disabled]="form.invalid"></button>
             <p-button label="Cancel" styleClass="p-button-warning"  (click)="hideUpdateForm()"></p-button>
+            <p-button label="Remove" styleClass="p-button-danger"  (click)="removeResident()"></p-button>
         </div>
         </div>
 
