--- a/src/styles-type.scss
+++ b/src/styles-type.scss
@@ -27,6 +27,12 @@
   font-weight: 500;
 }
 
+.black-12-bold {
+  font-size: 12px;
+  color: black;
+  font-weight: 600;
+}
+
 .small-black-text {
   font-size: 13px;
   color: black;
@@ -77,7 +83,6 @@
   font-size: 14px;
   margin: 0;
   color: crimson;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
 }
 
@@ -85,7 +90,13 @@
   font-size: 14px;
   margin: 0;
   color:#14b8a6;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+}
+
+.green-12 {
+  font-size: 12px;
+  margin: 0;
+  color:#14b8a6;
   font-weight: 500;
 }
 
