--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -19,17 +19,11 @@
     
      <div class="paragraph-header">Voting Proxies at the Special Meeting</div>
      <div class="paragraph-copy">
-      Signing the petition is just the first step.  You must also show up at the meeting and vote.  However, we can use the same tactic that has been so effectively used against us all these years 
-      to win back the Board.  If you are unable to attend, you can sign your vote over to another member by proxie.  Instructions and forms for doing this will be available 
-      once the meeting date has been set.
+      Signing the petition is just the first step.  You must also show up at the meeting and vote.   If you are unable to attend, or just do not wish to, you can sign your vote over to another member by proxie.  Instructions and forms for doing this will be available 
+      once the meeting date has been set.  The proxie is only good for this one meeting.
      </div>
     
-     <div class="paragraph-header">What Will Happen at the Meeting</div>
-     <div class="paragraph-copy">
-      The first order of business will be to vote on the specific purpose of the meeting to remove the current President and Vice-president.  
-      After that passes with at least 51% voting for, a motion will be put forward to extend the Special Meeting to include other business.  
-      After that passes with a 2/3's majority, we will carry on with a vote to update the bylaws with the proposed changes.
-     </div>
+    
   </div>
   <div class="sidebar200">
     <img class="images" src="assets\images\IMG_4003.jpg" />
