--- a/src/app/hoa/docs/docs.component.html
+++ b/src/app/hoa/docs/docs.component.html
@@ -1,18 +1,30 @@
 <div class="section-header">Documents</div>
 <p-divider></p-divider>
-<p-table [value]="docs" [tableStyle]="{ 'min-width': '50rem' }">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Description</th>
-            <th>PDF Link</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-docs>
-        <tr>
-            <td>{{ docs.description }}</td>
-            <td>
-                <button type="button" pButton icon="pi pi-file-pdf" (click)="selectPdf(docs.link)"></button>
-            </td>
-        </tr>
-    </ng-template>
-</p-table>
+
+
+<div class="urlLinkButton">
+    <button type="button" label="Bylaws of Westbury Square Townhomes, 1978" pButton icon="pi pi-file-pdf" (click)="selectPdf(bylaws.link)"></button>
+</div>
+
+<div class="urlLinkButton">
+    <button type="button" label="Rules and Regulations, Amended 2012" pButton icon="pi pi-file-pdf" (click)="selectPdf(rr.link)"></button>
+</div>
+
+<div class="urlLinkButton">
+    <button type="button" label="Articles of Incorportion, 1978" pButton icon="pi pi-file-pdf" (click)="selectPdf(inc.link)"></button>
+</div>
+
+<div class="urlLinkButton">
+    <button type="button" label="Condominium Declaration" pButton icon="pi pi-file-pdf" (click)="selectPdf(dec.link)"></button>
+</div>
+
+<div class="urlLinkButton">
+    <button type="button" label="Condominium Declaration Amendment" pButton icon="pi pi-file-pdf" (click)="selectPdf(amend.link)"></button>
+</div>
+
+<div class="urlLinkButton">
+    <button type="button" label="Property Map" pButton icon="pi pi-file-pdf" (click)="selectPdf(map.link)"></button>
+</div>
+
+
+
