--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,6 +96,10 @@ body {
     padding-left:0;
 }
 
+.urlLinkButton{
+    margin-bottom: 10px;
+}
+
 .gallery{
     display:flex;
     flex-wrap: wrap;
