--- a/src/app/hoa/updates/updates.component.html
+++ b/src/app/hoa/updates/updates.component.html
@@ -3,5 +3,5 @@
 
 
 <div class="urlLinkButton">
-    <button type="button" label="Bylaws of Westbury Square Townhomes, 1978" pButton icon="pi pi-file-pdf" (click)="selectPdf(bylaws.link)"></button>
+    <button type="button" label="Proposed Updates to WST Bylaws" pButton icon="pi pi-file-pdf" (click)="selectPdf(bylaws.link)"></button>
 </div>
