--- a/src/styles-type.scss
+++ b/src/styles-type.scss
@@ -24,7 +24,6 @@
   font-size: 14px;
   color: black;
   margin: 0;
-  font-weight: 500;
 }
 
 .black-12-bold {
@@ -48,6 +47,12 @@
 }
 .black-13-550 {
   font-size: 13px;
+  color: black;
+  margin: 0;
+  font-weight: 550;
+}
+.black-14-600 {
+  font-size: 14px;
   color: black;
   margin: 0;
   font-weight: 550;
