--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -1,10 +1,14 @@
 <div class="page-content" *ngIf="loginMode !='PW'">
  
   <div class="section-header">{{ pageTitle }}</div>
-  <div class="black12">Default password <span class="black-12-bold">"wstadmin"</span>. <br>
+  <p-divider></p-divider>
+  <div class="black-14-600">If this is your first time here:</div>
+  <div class="small-black-14">Enter your email and the default password <span class="black-14-600">"wstadmin"</span>. <br>
+    If you get a message that your email is not registered, send a request to 'westburyforms@gmail.com'<br>
+    We are currently only allowing one registered email per unit.<br>
     By signing in you agree to be counted as a member.
   </div>
-  <div class="spacer-5"></div>
+  <p-divider></p-divider>
   <div>
     <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
