--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -4,7 +4,7 @@
   <p-divider></p-divider>
   <div class="black-14-600">If this is your first time here:</div>
   <div class="small-black-14">Enter your email and the default password <span class="black-14-600">"wstadmin"</span>. <br>
-    If you get a message that your email is not registered, send a request to 'westburyforms@gmail.com'<br>
+    If you get a message that your email is not registered, send a request to 'westburysq@gmail.com'<br>
     We are currently only allowing one registered email per unit.<br>
     By signing in you agree to be counted as a member.
   </div>
