--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -14,11 +14,12 @@
       the bylaws which have all fallen flat. They lacked the organization and communication necessary for a successful campaign for change.
     We have that now.  Through this website and other social platforms we are better prepared to see this through than ever before.</div>
 
-    <div class="paragraph-copy-bold">We can do this!</div>
-
-    <div class="paragraph-copy">Our first priority is to update the bylaws to eliminate the loopholes which have allowed unscrupulous Boards to remain in power year after year.
-      Unfortunately, the current Board is opposed to these changes, and must therefore be removed before we can move forward.  
-      It's sad that we have to resort to petitions and forced removal, but that is where we find ourselves.</div>
+    <div class="paragraph-copy-bold">The Gang of Three </div>
+    <div class="paragraph-copy">Our first priority is to update the bylaws to eliminate the loopholes which have allowed unscrupulous Boards 
+      to remain in power year after year. <b>Under our current bylaws, the President and any other two Board members have unchecked power, 
+      forming a "Gang of Three" that can push through any vote without oversight or accountability. </b>
+      Unfortunately, the current Board is exactly this, and is opposed to these changes. 
+      Therefore, they must be removed before we can move forward. It's sad that we have to resort to petitions and forced removal, but that is where we find ourselves.</div>
       <div class="paragraph-copy-bold">What's the next step?</div>
       <div class="paragraph-copy">Click on the 'Bylaws' and 'Petition' tabs above to learn more about what we are proposing.</div>
       <div class="paragraph-copy-bold">Become a member</div>
