--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-copy-bold">What is the WST Advocacy Group?</div>
+    <div class="paragraph-copy-bold">Why was the WST Advocacy Group formed?</div>
     <div class="paragraph-copy">
       The Westbury Square Townhomes Advocacy Group exists to bring Members together for a common cause and provide a means to make 
         your voice heard. Together we can hold the Board accountable and put an end to the secretive, 
@@ -14,13 +14,59 @@
       the bylaws which have all fallen flat. They lacked the organization and communication necessary for a successful campaign for change.
     We have that now.  Through this website and other social platforms we are better prepared to see this through than ever before.</div>
 
+    <div class="paragraph-copy-bold">Our Community is in Dire Straits</div>
+    <div class="paragraph-copy">
+      <li>Many roofs are still in need of replacing.</li> 
+      <li>Two of our three water boilers are in need of major repairs.</li>
+      <li>Almost half the the security cameras are out of commission.</li>
+      <li>Rodents and roaches are rampant in certain areas.</li>
+      <li>Laundry machines are constantly out of order and two machines missing all together.</li> 
+      <li>Our reserve fund is at an all time low.</li> 
+      <li>A complete financial audit, required every year under the bylaws, has not been done since 2020.</li>
+      <li>An annual statement showing receipts, expenses and disbursements (as required by the bylaws) as not been prepared since 2020.</li>
+      <li>Monthly financial reports have not been updated since Feb 2022.</li>
+      <li>Minutes from the Quarterly Open Board of Director meetings have not been posted since June 2022.</li> 
+      
+    </div>
+
     <div class="paragraph-copy-bold">The Gang of Three </div>
     <div class="paragraph-copy">Our first priority is to update the bylaws to eliminate the loopholes which have allowed unscrupulous Boards 
       to remain in power year after year. <b>Under our current bylaws, the President and any other two Board members have unchecked power, 
       forming a "Gang of Three" that can push through any vote without oversight or accountability. </b>
       Unfortunately, the current Board is exactly this, and is opposed to these changes. 
-      Therefore, they must be removed before we can move forward. It's sad that we have to resort to petitions and forced removal, but that is where we find ourselves.</div>
-      <div class="paragraph-copy-bold">What's the next step?</div>
+      Therefore, they must be removed before we can move forward. It's sad that we have to resort to petitions and forced removal, but that is where we find ourselves.
+    </div>
+    <div class="paragraph-copy-bold">Separation of Power</div>
+    <div class="paragraph-copy">It is generally considered a best practice to keep the roles of the Board of Directors and the Officers separate to 
+      prevent conflicts of interest and ensure proper oversight. Allowing the Board to appoint themselves as Officers creates a concentration 
+      of power and limits the checks and balances within the organization.
+    </div>
+      <div class="paragraph-copy-bold">The Board of Directors:</div>
+      <div class="paragraph-copy">
+        <ul>
+          <li>The Board of Directors is the governing body of the association, typically consisting of elected or appointed individuals from the community. 
+            The number of members on the board and their specific roles may be outlined in the association's bylaws.</li>
+          <li>The primary function of the Board is to set policies, make major decisions, and oversee the general affairs of the association. 
+            They have the authority to create and enforce rules and regulations that govern the community and are responsible for the long-term management 
+            and financial well-being of the association.</li>
+          <li>Board members usually serve for specific terms, and their positions may be subject to election or appointment by the association's members.</li>
+        </ul>
+      </div>
+      <div class="paragraph-copy-bold">The Officers:</div>
+      <div class="paragraph-copy">
+        <ul>
+          <li>The Officers are individuals who are elected or appointed by the Board of Directors to hold specific leadership positions.</li>
+          <li>The most common Officer positions include President, Vice President, Secretary, and Treasurer. </li>
+          <li>The Officers are responsible for the day-to-day operations of the association and implementing the policies and decisions set by the Board of Directors.</li>
+          <li> They are accountable for managing the association's finances, overseeing community maintenance and services, handling administrative tasks, 
+            and interacting with residents and vendors on a regular basis.</li>
+        </ul>
+
+      </div>
+
+
+
+
       <div class="paragraph-copy">Click on the 'Bylaws' and 'Petition' tabs above to learn more about what we are proposing.</div>
       <div class="paragraph-copy-bold">Become a member</div>
     <div class="paragraph-copy">All WST Owners are eligible to join. Click on the 'Members' button above and follow the instructions.</div>
