--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -14,18 +14,20 @@
       the bylaws which have all fallen flat. They lacked the organization and communication necessary for a successful campaign for change.
     We have that now.  Through this website and other social platforms we are better prepared to see this through than ever before.</div>
 
-    <div class="paragraph-copy-bold">Our Community is in Dire Straits</div>
+    <div class="paragraph-copy-bold">We Need a Change of Management!</div>
     <div class="paragraph-copy">
-      <li>Many roofs are still in need of replacing.</li> 
-      <li>Two of our three water boilers are in need of major repairs.</li>
-      <li>Almost half the the security cameras are out of commission.</li>
-      <li>Rodents and roaches are rampant in certain areas.</li>
-      <li>Laundry machines are constantly out of order and two machines missing all together.</li> 
       <li>Our reserve fund is at an all time low.</li> 
       <li>A complete financial audit, required every year under the bylaws, has not been done since 2020.</li>
       <li>An annual statement showing receipts, expenses and disbursements (as required by the bylaws) as not been prepared since 2020.</li>
       <li>Monthly financial reports have not been updated since Feb 2022.</li>
       <li>Minutes from the Quarterly Open Board of Director meetings have not been posted since June 2022.</li> 
+      <li>At the beginning of 2022 we were promised a rigourous effort to collect delinquent accounts, and still there have been no significant progress.</li> 
+      <li>Many roofs are still in need of replacing.</li> 
+      <li>Two of our three water boilers are in need of major repairs.</li>
+      <li>Almost half the the security cameras are out of commission.</li>
+      <li>Rodents and roaches are rampant in certain areas.</li>
+      <li>Laundry machines are constantly out of order and two machines missing all together.</li> 
+      
       
     </div>
 
