--- a/src/styles-type.scss
+++ b/src/styles-type.scss
@@ -79,6 +79,13 @@
   font-weight: 550;
 }
 
+.red-16-550 {
+  font-size: 16px;
+  color: crimson;
+  margin: 0;
+  font-weight: 550;
+}
+
 .tiny-text {
   font-size: 12px;
   margin: 0;
