--- a/src/app/hoa/updates/updates.component.html
+++ b/src/app/hoa/updates/updates.component.html
@@ -1,7 +1,75 @@
-<div class="section-header">Documents</div>
+<div class="section-header">By-Laws</div>
 <p-divider></p-divider>
 
 
 <div class="urlLinkButton">
     <button type="button" label="Proposed Updates to WST Bylaws" pButton icon="pi pi-file-pdf" (click)="selectPdf(bylaws.link)"></button>
 </div>
+
+<div>Summary of Major By-law Changes</div>
+<div>
+    <ul>
+        <li>
+            3.2 Voting: Voting may be done either in person or by online means.
+        </li>
+        <li>
+            3.5 Proxies: Proxies must be submitted to the Secretary or Assistant Secretary of the Association at least 24 hours before the appointed time of the meeting for 
+            which the proxy is intended. No owner shall hold more than two proxies for any given meeting. 
+            The Secretary or Assistant Secretary shall certify all proxies before the meeting to ensure their validity and authenticity.
+        </li>
+        <li>
+            5.8b Written Minutes and Recordings:(i) All Board of Directors meetings, whether held in person or through virtual platforms such as Zoom, 
+            shall be recorded to ensure accurate documentation of the proceedings.
+            (ii) For in-person meetings, the Secretary of the Association shall be responsible for taking detailed written Minutes of each meeting, 
+            including a summary of discussions, decisions, and any actions taken.
+            (iii) In the case of virtual meetings conducted via platforms like Zoom, the meeting shall be recorded in its entirety to capture all discussions and deliberations.
+        </li>
+        <li>
+            5.8c  Distribution of Meeting Records:
+            (i) Minutes or recorded meeting files shall be made accessible to all homeowners within a reasonable time frame after the meeting, not exceeding seven (7) calendar days.
+            (ii) The Minutes or recordings shall be made available through electronic means, such as email or the Association's official website or 
+            other approved website unless a homeowner specifically requests a physical copy.
+        </li>
+        <li>
+            7.2  Qualifications and Requirements for Officers. 
+            To ensure proper representation and understanding of the community's needs, the President and Vice-President must reside full-time on the property. 
+            It is essential to maintain a clear distinction between the Board of Directors and the Officers. 
+            Therefore, no two persons residing in the same unit or any individuals related by blood, marriage, 
+            or other family ties shall serve together on the Board or as Officers, 
+            except they may serve together if one person is on the Board, and the other person serves as an Officer.
+        </li>
+        <li>
+            7.3  Election of Officers. The officers of the Association shall be elected annually by the Board of Directors during the organization 
+            meeting of each new Board and shall hold office subject to the continuing approval of the Board. Board members are prohibited from appointing/electing
+            themselves as Officers, ensuring the independence and effectiveness of the Board's decision-making process,and providing oversight and transparency of Officers.
+
+        </li>
+        
+    </ul>
+
+</div>
+<p-divider></p-divider>
+<div class="section-header">Rules and Regulations</div>
+<div>Summary of Rules and Regulations Changes</div>
+<div>
+    <ul>
+        <li>
+           
+        </li>
+        <li>
+           
+        </li>
+        <li>
+           
+        </li>
+        <li>
+           
+        </li>
+        <li>
+           
+        </li>
+        
+    </ul>
+
+</div>
+
