--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,9 +1,11 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
     <div class="paragraph-header">Update to the Bylaws</div>
-    
+    <span class="red-16-550">For a complete review of all proposed changes to both the Bylaws and Rules and Regulations, please log-in under the Members tab, 
+      then choose "Governing Documents Update" under the HOA tab.</span><br>
+      <span>The following changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span><br>
+      
 
-      <span>The following changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span>
     <div class="paragraph-copy">
       <ul>
         <li>Limit the number of proxies any single owner may hold</li>
@@ -14,8 +16,7 @@
     <div class="paragraph-copy">Because our bylaws were written in 1978 (before the internet!), there are many instances where the language is vague, 
       outdated and fails to incorporate modern technology. For a full copy of the bylaws with all the proposed changes highlighted, please become a
     member of WSTAG.</div>
-    <div class="paragraph-copy-bold">Become a member</div>
-    <div class="paragraph-copy">All WST Owners are eligible to join. Click on the 'Members' button above and follow the instructions.</div>
+    
       <p-divider></p-divider>
     </div>
    
