--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -71,7 +71,7 @@
 
       <div class="paragraph-copy">Click on the 'Bylaws' and 'Petition' tabs above to learn more about what we are proposing.</div>
       <div class="paragraph-copy-bold">Become a member</div>
-    <div class="paragraph-copy">All WST Owners are eligible to join. Click on the 'Members' button above and follow the instructions.</div>
+    <div class="paragraph-copy">Click on the 'Members' button above and follow the instructions. This is a private web site.</div>
       <p-divider></p-divider>
     
    
