--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -2,6 +2,7 @@
  
   <div class="section-header">{{ pageTitle }}</div>
   <p-divider></p-divider>
+  <span class="red-16-550">We need your email to set up your account.  You may already have and account, then again, you may not. Try it and see.</span>
   <div class="black-14-600">If this is your first time here:</div>
   <div class="small-black-14">Enter your email and the default password <span class="black-14-600">"wstadmin"</span>. <br>
     If you get a message that your email is not registered, send a request to 'westburysq@gmail.com'<br>
